--- a/app/src/main/res/layout/activity_create_payment.xml
+++ b/app/src/main/res/layout/activity_create_payment.xml
@@ -33,8 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterDetailCard"
-        app:layout_constraintVertical_bias="0.1">>
+        app:layout_constraintTop_toBottomOf="@+id/PaymentConfirmText"
+        app:layout_constraintVertical_bias="0.1">
 
         <Button
             android:id="@+id/CreatePaymentButton"
@@ -48,48 +48,7 @@
             android:textColor="@color/black" />
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/CardViewConfirmCancel"
-        android:layout_width="325dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#cdeac7"
-        android:visibility="gone"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterDetailCard"
-        app:layout_constraintVertical_bias="0.1">
 
-        <LinearLayout
-            android:layout_width="325dp"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/ConfirmPaymentButton"
-                android:layout_width="75dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:backgroundTint="#98ED89"
-                android:insetLeft="5dp"
-                android:insetRight="5dp"
-                android:text="Confirm"
-                android:textColor="@color/black" />
-
-            <Button
-                android:id="@+id/CancelPaymentButton"
-                android:layout_width="75dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:backgroundTint="#98ED89"
-                android:insetLeft="5dp"
-                android:insetRight="5dp"
-                android:text="Cancel"
-                android:textColor="@color/black" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/SunPay1"
@@ -106,10 +65,10 @@
         app:srcCompat="@drawable/sun" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/RegisterDetailCard"
+        android:id="@+id/PaymentConfirmText"
         android:layout_width="325dp"
         android:layout_height="330dp"
-        android:backgroundTint="#cdeac7"
+        android:backgroundTint="#ffffff"
         android:visibility="visible"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:ems="10"
+                android:fontFamily="@font/satoshiblack"
                 android:inputType="textPersonName"
                 android:text="Booking Information"
                 android:textAlignment="center"
@@ -151,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:ems="10"
+                android:fontFamily="@font/satoshiblack"
                 android:inputType="text"
                 android:text="From:"
                 android:textAlignment="center"
@@ -161,6 +122,7 @@
                 android:id="@+id/FromFillText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/satoshiblack"
                 android:hint="yyyy-mm-dd"
                 android:textAlignment="center"
                 android:textSize="20dp"
@@ -171,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:ems="10"
+                android:fontFamily="@font/satoshiblack"
                 android:inputType="textPersonName"
                 android:text="To:"
                 android:textAlignment="center"
@@ -181,6 +144,7 @@
                 android:id="@+id/ToFillText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/satoshiblack"
                 android:hint="yyyy-mm-dd"
                 android:textAlignment="center"
                 android:textSize="20dp"
@@ -191,6 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:ems="10"
+                android:fontFamily="@font/satoshiblack"
                 android:inputType="textPersonName"
                 android:text="Room Name:"
                 android:textAlignment="center"
@@ -201,13 +166,23 @@
                 android:id="@+id/RoomNamePaymentFill"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:fontFamily="@font/satoshiblack"
                 android:textAlignment="center"
                 android:textSize="20dp"
                 android:textStyle="bold|italic" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView><![CDATA[
+    </androidx.cardview.widget.CardView>
 
-    />
-]]>
+    <ImageView
+        android:layout_width="600dp"
+        android:layout_height="630dp"
+        android:alpha="0.3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        app:srcCompat="@drawable/circular_leaf" />
 </androidx.constraintlayout.widget.ConstraintLayout>
