--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -7,11 +7,14 @@
     android:background="#f5ffd6"
     tools:context=".CreateRoomActivity">
 
+
+
     <TextView
         android:id="@+id/CreateRoomText"
-        android:layout_width="match_parent"
+        android:layout_width="325dp"
         android:layout_height="wrap_content"
-        android:background="#acdda3"
+
+        android:background="@drawable/rounded_corner_title"
         android:fontFamily="cursive"
         android:text="Create Room"
         android:textAlignment="center"
@@ -19,27 +22,28 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.075" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="370dp"
-        android:layout_height="510dp"
+        android:layout_width="325dp"
+        android:layout_height="485dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#cdeac7"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CreateRoomText"
-        app:layout_constraintVertical_bias="0.1">
+        app:layout_constraintVertical_bias="0.008">
 
         <LinearLayout
-            android:layout_width="365dp"
-            android:layout_height="500dp"
+            android:layout_width="325dp"
+            android:layout_height="480dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -55,87 +59,97 @@
 
                 <EditText
                     android:id="@+id/RoomNameFill"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:fontFamily="@font/satoshiblack"
                     android:hint="Name"
                     android:inputType="textPersonName" />
 
                 <EditText
                     android:id="@+id/RoomPriceFill"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:fontFamily="@font/satoshiblack"
                     android:hint="Price"
                     android:inputType="textPersonName" />
 
                 <EditText
                     android:id="@+id/RoomAddressFill"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:fontFamily="@font/satoshiblack"
                     android:hint="Address"
                     android:inputType="textPersonName" />
 
                 <EditText
                     android:id="@+id/RoomSizeFill"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:fontFamily="@font/satoshiblack"
                     android:hint="Size"
                     android:inputType="textPersonName" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="365dp"
+                android:layout_width="325dp"
                 android:layout_height="182dp"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="365dp"
+                    android:layout_width="325dp"
                     android:layout_height="55dp"
                     android:orientation="horizontal">
 
                     <CheckBox
                         android:id="@+id/checkBoxBathub"
-                        android:layout_width="117dp"
+                        android:layout_width="88dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Bathub" />
 
                     <CheckBox
                         android:id="@+id/checkBoxBalcony"
-                        android:layout_width="121dp"
+                        android:layout_width="115dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Balcony" />
 
                     <CheckBox
                         android:id="@+id/checkBoxRestaurant"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Restaurant" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="365dp"
+                    android:layout_width="325dp"
                     android:layout_height="55dp"
                     android:orientation="horizontal">
 
                     <CheckBox
                         android:id="@+id/checkBoxAC"
-                        android:layout_width="118dp"
+                        android:layout_width="88dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="AC" />
 
                     <CheckBox
                         android:id="@+id/checkBoxRefrigerator"
-                        android:layout_width="121dp"
+                        android:layout_width="117dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Refrigerator" />
 
                     <CheckBox
                         android:id="@+id/checkBoxWifi"
-                        android:layout_width="109dp"
+                        android:layout_width="121dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Wifi" />
                 </LinearLayout>
 
@@ -146,14 +160,16 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxSwimmingPool"
-                        android:layout_width="193dp"
+                        android:layout_width="151dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Swimming Pool" />
 
                     <CheckBox
                         android:id="@+id/checkBoxFitnessCenter"
                         android:layout_width="173dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/satoshiblack"
                         android:text="Fitness Center" />
 
                 </LinearLayout>
@@ -166,10 +182,12 @@
 
                 <TextView
                     android:id="@+id/CityTextCreateRoom"
-                    android:layout_width="165dp"
+                    android:layout_width="125dp"
                     android:layout_height="40dp"
                     android:gravity="left"
                     android:text="City"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/satoshiblack"
                     android:textSize="26dp" />
 
                 <Spinner
@@ -186,10 +204,12 @@
 
                 <TextView
                     android:id="@+id/BedTypeTextCreateRoom"
-                    android:layout_width="165dp"
+                    android:layout_width="125dp"
                     android:layout_height="40dp"
                     android:gravity="left"
+                    android:fontFamily="@font/satoshiblack"
                     android:text="Bed Type"
+                    android:textColor="#000000"
                     android:textSize="26dp" />
 
                 <Spinner
@@ -202,6 +222,7 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="331dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
@@ -230,5 +251,19 @@
             android:text="Cancel"
             android:textColor="@color/black" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="502dp"
+
+        android:alpha="0.2"
+        android:rotation="200"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.5"
+        app:srcCompat="@drawable/bottom_leaf" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
